<resources>
    <!--    Global     -->
    <string name="app_name">Restaurant in Surrey</string>
    <string name="action_settings">Settings</string>
    <string name="restaurant_in_surrey">Restaurant in Surrey</string>
    <string name="basic_date_format">MM/dd/yyyy</string>
    <string name="text_other">OTHER</string>

    <string name="text_high_hazard">HIGH</string>
    <string name="text_moderate_hazard">MODERATE</string>
    <string name="text_low_hazard">LOW</string>

    <!--    MainActivity    -->
    <string name="welcome">Welcome!</string>
    <string name="by_argon">By: Argon</string>

    <!--    RestaurantListActivity    -->
    <string name="title_activity_restaurant_list">Restaurant in Surrey</string>
    <string name="text_issues">Issues: %d</string>
    <string name="text_last_inspection">Last Inspection: </string>

    <!--    RestaurantDetailActivity    -->
    <string name="title_activity_single_restaurant">Restaurant Detail</string>
    <string name="text_restaurant_name">Restaurant Name</string>
    <string name="text_restaurant_address">Restaurant Address</string>
    <string name="title_restaurant_inspection">Inspections:</string>
    <string name="title_no_inspections">No inspection reports available</string>

    <!--    InspectionDetailsActivity    -->
    <string name="title_activity_inspection_details">Inspection Details</string>
    <string name="text_inspection_date">Inspection date: %s</string>
    <string name="text_inspection_type">Inspection type: %s</string>
    <string name="title_violations">Violations: </string>
    <string name="title_no_violations">No violations available</string>
    <string name="title_hazard_level">Hazard Level: </string>
    <string name="text_critical_issues">Critical issues: %d</string>
    <string name="text_non_critical_issues">Non critical issues: %d</string>
    <string name="text_follow_up_inspection">Follow-Up</string>
    <string name="text_routine_inspection">Routine</string>

    <!--    Time Formatting    -->
    <string name="text_inspection">%d days ago</string>
    <string name="text_inspection_by_date_less_one_year">%s %d</string>
    <string name="text_inspection_by_date">%s %d</string>
    <string name="text_inspection_no_date">None</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map_and_restaurant_list">MapAndRestaurantListActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="fragment_map">MAP</string>
    <string name="fragment_restaurant">RESTAURANT</string>

    <!--    Map Fragment    -->
    <string name="text_map_activity_see_reports">See Reports</string>
    <string name="text_map_activity_address_detail">Address: %s</string>


    <!--    Map and List Activity   -->
    <string name="enter_a_restaurant_name">Enter a restaurant name</string>
    <string name="text_filter_by">Filter by</string>
    <string name="text_min_critical_violations">Minimum Critical Violations:(within one year)</string>
    <string name="text_max_critical_violations">Maximum Critical Violations:(within one year)</string>
    <string name="hazard_level">Hazard level:   </string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">CANCEL</string>
    <string name="hazard_level_filter_option_none">NONE</string>
    <string name="hazard_level_filter_option_low">LOW</string>
    <string name="hazard_level_filter_option_moderate">MODERATE</string>
    <string name="hazard_level_filter_option_high">HIGH</string>
    <string name="text_favourites">Favourites</string>

    <!-- UpdateActivity -->
    <string name="status_update_waiting">Waiting…</string>
    <string name="status_update_downloading_restaurants">Downloading Restaurants Data…</string>
    <string name="status_update_downloading_reports">Downloading Inspection Reports Data…</string>
    <string name="status_update_downloading_images">Downloading Restaurant Images… (%d/%d)</string>
    <string name="text_update_cancel">Cancel</string>
    <string name="title_update_alert">New Data is Available</string>
    <string name="message_update_alert">Do you want to update? \n\nUpdate restaurant images may takes long.\nIf choose update without images, you can still download images tomorrow.</string>
    <string name="text_update_alert_no">Do not update</string>
    <string name="text_update_alert_data_only">Update without images</string>
    <string name="text_update_alert_update">Update</string>
    <string name="title_update_alert_image_only">New Images are Available</string>

    <!-- UpdatedNotificationActivity -->
    <string name="text_updated_notification_for_favorites">There are some new reports for your favorite restaurants:</string>
    <string name="title_activity_updated_notifications">Updated Notifications</string>

</resources>
