<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image_inspection_hazard_level"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        tools:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/text_inspection_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:text="@string/basic_date_format"
        app:layout_constraintStart_toEndOf="@id/image_inspection_hazard_level"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_inspection_number_of_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/text_issues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_inspection_number_of_critical_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:text="@string/text_critical_issues"
        app:layout_constraintStart_toEndOf="@id/image_inspection_hazard_level"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_date" />

    <TextView
        android:id="@+id/text_inspection_number_of_non_critical_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:text="@string/text_non_critical_issues"
        app:layout_constraintStart_toEndOf="@id/image_inspection_hazard_level"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_number_of_critical_issues" />

    <TextView
        android:id="@+id/text_inspection_hazard_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_hazard_level"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@id/image_inspection_hazard_level"
        app:layout_constraintStart_toEndOf="@id/image_inspection_hazard_level"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_number_of_non_critical_issues" />

    <TextView
        android:id="@+id/text_inspection_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@color/colorGreen"
        android:textStyle="bold"
        android:text="@string/text_low_hazard"
        app:layout_constraintStart_toEndOf="@id/text_inspection_hazard_levels"
        app:layout_constraintTop_toTopOf="@id/text_inspection_hazard_levels"
        app:layout_constraintBottom_toBottomOf="@id/text_inspection_hazard_levels"/>
</androidx.constraintlayout.widget.ConstraintLayout>