<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.InspectionDetailsActivity"
    tools:showIn="@layout/activity_inspection_details">

    <TextView
        android:id="@+id/text_inspection_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_inspection_date"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_inspection_details_hazard_sign" />

    <TextView
        android:id="@+id/text_inspection_details_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_inspection_type"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_date" />

    <TextView
        android:id="@+id/text_inspection_details_critical_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/text_critical_issues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_details_type" />

    <TextView
        android:id="@+id/text_inspection_details_non_critical_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/text_non_critical_issues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_details_critical_issues" />

    <ImageView
        android:id="@+id/image_inspection_details_hazard_sign"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/green_warning_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_inspection_details_hazard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:text="@string/title_hazard_level"
        app:layout_constraintBottom_toBottomOf="@id/image_inspection_details_hazard_sign"
        app:layout_constraintStart_toEndOf="@id/image_inspection_details_hazard_sign"
        app:layout_constraintTop_toTopOf="@id/image_inspection_details_hazard_sign" />

    <TextView
        android:id="@+id/text_inspection_details_hazard_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:text="@string/text_low_hazard"
        app:layout_constraintBottom_toBottomOf="@id/image_inspection_details_hazard_sign"
        app:layout_constraintStart_toEndOf="@id/text_inspection_details_hazard_title"
        app:layout_constraintTop_toTopOf="@id/image_inspection_details_hazard_sign" />

    <TextView
        android:id="@+id/text_inspection_details_violation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_violations"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_details_non_critical_issues" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_inspection_details_violations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_inspection_details_violation"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>